fix: Add cargo fetch step and track Cargo.lock
- Add explicit cargo fetch step before running clippy
- Remove Cargo.lock from .gitignore to ensure consistent dependencies
- This should resolve Ubuntu CI dependency resolution issues

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -73,6 +73,9 @@ jobs:
         path: target
         key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
     
+    - name: Fetch dependencies
+      run: cargo fetch --verbose
+    
     - name: Check formatting
       run: cargo fmt -- --check
       continue-on-error: ${{ matrix.rust == 'nightly' }}
