fix: Update GitHub Actions to remove deprecated actions
- Replace actions-rs/toolchain with dtolnay/rust-toolchain
- Replace actions-rs/audit-check with direct cargo audit command
- Remove unwrap() in audit logger to fix potential clippy warning
- This removes all deprecated set-output warnings and potential clippy issues

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,12 +53,10 @@ jobs:
         echo "PKG_CONFIG_PATH=$(brew --prefix openssl@3)/lib/pkgconfig" >> $GITHUB_ENV
     
     - name: Install Rust
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
-        profile: minimal
         toolchain: stable
-        target: ${{ matrix.target }}
-        override: true
+        targets: ${{ matrix.target }}
     
     - name: Install cross-compilation tools
       if: matrix.os == 'ubuntu-latest' && matrix.target == 'aarch64-unknown-linux-gnu'
