fix: Correct dtolnay/rust-toolchain usage syntax
- Use @${{ matrix.rust }} directly instead of toolchain parameter
- The action tag determines the toolchain version

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -48,9 +48,8 @@ jobs:
         echo "C:\strawberry\perl\bin" >> $env:GITHUB_PATH
     
     - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
+      uses: dtolnay/rust-toolchain@${{ matrix.rust }}
       with:
-        toolchain: ${{ matrix.rust }}
         components: rustfmt, clippy
     
     - name: Cache cargo registry
