fix: Add more clippy allows and verbose clippy output
- Add allows for too_many_arguments and module_inception
- Make clippy output more verbose to help diagnose issues
- Run clippy on all targets and features

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -85,7 +85,7 @@ jobs:
       continue-on-error: ${{ matrix.rust == 'nightly' }}
     
     - name: Run clippy
-      run: cargo clippy
+      run: cargo clippy --all-targets --all-features -- -W clippy::all
       continue-on-error: ${{ matrix.rust == 'nightly' }}
     
     - name: Build
