fix: Move dependencies to correct section in Cargo.toml
CRITICAL FIX: Dependencies were placed after target-specific sections
- Move all general dependencies before target-specific dependencies
- This was causing cargo to not recognize most dependencies
- Remove platform-specific ls command that fails on Windows

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -98,9 +98,7 @@ jobs:
       run: cargo fetch --verbose
     
     - name: Check dependencies
-      run: |
-        cargo tree
-        ls -la ~/.cargo/registry/ || true
+      run: cargo tree
     
     - name: Check formatting
       run: cargo fmt -- --check
