--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ uuid = { version = "1.10", features = ["v4"] }
 sha2 = "0.10"
 aes-gcm = "0.10"
 rand = "0.8"
+zeroize = "1.8"
 
 # Configuration
 config = "0.14"
